Thu Dec  3 20:12:57 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/tests/CSLDeadline/Sender/CSL_DeadlineTest_Sender_exec.cpp
        * connectors/dds4ccm/tests/CSLQoS/Receiver/CSL_QoSTest_Receiver_exec.cpp
        * connectors/dds4ccm/tests/CSLQoS/Sender/CSL_QoSTest_Sender_exec.cpp
        * connectors/dds4ccm/tests/CSLSampleRejected/Receiver/CSL_SRTest_Receiver_exec.cpp
        * connectors/dds4ccm/tests/CSLSampleRejected/Sender/CSL_SRTest_Sender_exec.cpp
        * connectors/dds4ccm/tests/CSLUnexpStat/Receiver/CSL_USTest_Receiver_exec.cpp
        * connectors/dds4ccm/tests/CSLUnexpStat/Sender/CSL_USTest_Sender_exec.cpp
        * connectors/dds4ccm/tests/On_Inconsistent_Topic/Sender/ConnectorStatusListener_Test_Sender_exec.cpp
          Layout changes

Thu Dec  3 20:08:57 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/ndds/DDS_TopicBase_Connector_T.cpp
        * connectors/dds4ccm/impl/ndds/DomainParticipant.cpp
        * connectors/dds4ccm/impl/ndds/PublisherListener.cpp
        * connectors/dds4ccm/impl/ndds/PublisherListener_T.cpp
        * connectors/dds4ccm/impl/ndds/SubscriberListener.cpp
        * connectors/dds4ccm/impl/ndds/SubscriberListener_T.cpp
          Added a lot of logging and made the subscriberlistener
          working again

Thu Dec  3 20:08:39 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/ndds/DataReaderListener_T.cpp:
          Only returning valid data.

Thu Dec  3 18:46:35 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/ndds/DataReaderStateListener_T.cpp:
          Using a take in stead of take_next_sample. Also created
          Created difference between ONE_BY_ONE and MANY_BY_MANY by
          invoking on_one_update and on_many_updates on the listener.

Thu Dec  3 15:13:57 UTC 2009  Marijke Hengstmengel  <mhengstmengel@remedy.nl>
